[gd_scene load_steps=7 format=2]

[ext_resource path="res://exit.gd" type="Script" id=1]
[ext_resource path="res://start.gd" type="Script" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="QuadMesh" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="exit" type="Button" parent="."]
margin_left = 250.0
margin_top = 400.0
margin_right = 350.0
margin_bottom = 445.0
text = "exit"
script = ExtResource( 1 )

[node name="start" type="Button" parent="."]
margin_left = 250.0
margin_top = 200.0
margin_right = 350.0
margin_bottom = 245.0
text = "start"
script = ExtResource( 2 )

[node name="Game" type="Node2D" parent="."]
visible = false
script = ExtResource( 4 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Game"]
modulate = Color( 0.356863, 0.345098, 0.647059, 1 )
material = SubResource( 1 )
position = Vector2( 300, 300 )
scale = Vector2( 300, 100 )
mesh = SubResource( 2 )

[node name="Label" type="Label" parent="Game"]
margin_left = 150.0
margin_top = 250.0
margin_right = 450.0
margin_bottom = 350.0
text = "test"
align = 1
autowrap = true
clip_text = true

[node name="Label4" type="Label" parent="Game/Label"]
margin_left = -50.0
margin_right = 250.0
margin_bottom = 100.0
text = "question"
align = 1
autowrap = true
clip_text = true

[node name="Label2" type="Label" parent="Game"]
margin_left = 150.0
margin_top = 350.0
margin_right = 450.0
margin_bottom = 450.0
text = "test"
align = 1
autowrap = true
clip_text = true

[node name="Label4" type="Label" parent="Game/Label2"]
margin_left = -50.0
margin_right = 250.0
margin_bottom = 100.0
text = "counter"
align = 1
autowrap = true
clip_text = true

[node name="Label3" type="Label" parent="Game"]
margin_left = 150.0
margin_top = 450.0
margin_right = 450.0
margin_bottom = 550.0
text = "test"
align = 1
autowrap = true
clip_text = true

[node name="Label4" type="Label" parent="Game/Label3"]
margin_left = -50.0
margin_right = 250.0
margin_bottom = 100.0
text = "health"
align = 1
autowrap = true
clip_text = true

[node name="Button1" type="Button" parent="Game"]
margin_left = 100.0
margin_top = 400.0
margin_right = 200.0
margin_bottom = 445.0

[node name="Button4" type="Button" parent="Game"]
margin_left = 100.0
margin_top = 500.0
margin_right = 200.0
margin_bottom = 545.0

[node name="Button2" type="Button" parent="Game"]
margin_left = 400.0
margin_top = 400.0
margin_right = 500.0
margin_bottom = 445.0

[node name="Button3" type="Button" parent="Game"]
margin_left = 400.0
margin_top = 500.0
margin_right = 500.0
margin_bottom = 545.0
